--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,38 +27,43 @@ steps:
 - script: |
     python -m pip install --upgrade pip setuptools wheel twine
     pip install -r requirements.txt
+    pip install -r dev_requirements.txt
   displayName: 'Install dependencies'
-
-# - script: |
-#     echo "y
-#     $(WORKSPACE-REGION-URL)
-#     $(DATABRICKS-PAT-TOKEN)
-#     $(TEST-CLUSTER-ID)
-#     $(WORKSPACE-ORG-ID)
-#     15001" | databricks-connect configure
-#   displayName: 'Configure DBConnect'
 
 - script: |
     python setup.py sdist bdist_wheel
-    ls dist/
   displayName: 'Artifact creation'
 
 - script: |
-    pip install --editable .
-    pip install pytest pytest-azurepipelines
-    pytest
+    export SKIP_INTEGRATION=True
+    pip install .
+    pytest test --junitxml=junit/test-results.xml --cov=spores --cov-report=xml --cov-report=html
   displayName: 'Unit Tests'
+
+- task: PublishTestResults@2
+  condition: succeededOrFailed()
+  inputs:
+    testResultsFiles: '**/test-*.xml'
+    testRunTitle: 'Publish test results for Python $(python.version)'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+    reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
 
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '$(Build.SourcesDirectory)/dist'
-    Contents: '**'
+    SourceFolder: '$(Build.SourcesDirectory)'
+    Contents: |
+      dist/**
+      deployment/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'dist'
+    ArtifactName: 'drop'
     publishLocation: 'Container'
   displayName: 'Publish Build Artefacts'
 
