--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ steps:
 
 - script: |
     python setup.py sdist bdist_wheel
+    python setup.py build_databricks_project
   displayName: 'Artifact creation'
 
 - script: |
@@ -58,7 +59,7 @@ steps:
     Contents: |
       dist/**
       deployment/**
-      databricks/**
+      databricks/dist/**
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
 - task: PublishBuildArtifacts@1
