--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,6 +24,10 @@ steps:
     versionSpec: '$(python.version)'
   displayName: 'Use Python $(python.version)'
 
+- task: PipAuthenticate@1
+  inputs:
+    artifactFeeds: 'sibytes' 
+    
 - script: |
     python -m pip install --upgrade pip setuptools wheel twine
     pip install -r requirements.txt
