--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,1 @@
-attrs==21.2.0
-autobricks==0.0.4
-black==21.9b0
-bleach==4.1.0
-certifi==2021.5.30
-charset-normalizer==2.0.6
-click==8.0.1
-coverage==5.5
-docutils==0.17.1
-entry-points-txt==0.1.0
-env==0.1.0
-headerparser==0.4.0
-idna==3.2
-iniconfig==1.1.1
-mypy-extensions==0.4.3
-packaging==21.0
-pathspec==0.9.0
-platformdirs==2.4.0
-pluggy==1.0.0
-py==1.10.0
-Pygments==2.10.0
-pyparsing==2.4.7
-pytest==6.2.5
-pytest-cov==2.12.1
-pytest-env==0.6.2
-PyYAML==5.4.1
-readme-renderer==24.0
-regex==2021.9.24
-requests==2.26.0
-sdist==0.0.0
-setuptools-databricks @ file:///Users/shaunryan/AzureDevOps/setuptools-databricks/dist/setuptools_databricks-0.1.0-py3-none-any.whl
-setuptools-git-versioning==1.7.0
-six==1.16.0
-toml==0.10.2
-tomli==1.2.1
-typing-extensions==3.10.0.2
-urllib3==1.26.7
-webencodings==0.5.1
-wheel-filename==1.3.0
-wheel-inspect==1.7.0
+pyyaml==5.4.1
